# shopping_list

./: app.py  config.py  pyproject.toml
shopping_list/: hello.py  models.py
shoppinglist/: __init__.py  models.py  routes.py  shopping_list_v1.db
specs/: v0.1.0.md  v0.1.1.md
tests/: test_shopping_list.py
