[tool.poetry]
name = "shopping_list"
version = "0.1.0"
description = ""
authors = ["Sara <sarabouaz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.2"
flask_sqlalchemy = "^2.3"
flask = "^1.0"
flask-marshmallow = "^0.9.0"
marshmallow-sqlalchemy = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"